#17 Fixed stretching of content on UltraWide screens.

--- a/src/blocks/copyright/copyright.scss
+++ b/src/blocks/copyright/copyright.scss
@@ -3,15 +3,20 @@
 
 .copyright {
   @include text_type($font-main, 14px, 400, 24px, $color-main-dark);
-  display: flex;
-  row-gap: 24px;
-  justify-content: space-between;
-  align-content: center;
   background: #ffffff;
   box-shadow: 0 10px 20px $color-secondary-light;
   padding: 23px 140px 23px 139px;
   margin-top: 1px;
   min-height: 70px;
+
+  &__wrapper {
+    display: flex;
+    row-gap: 24px;
+    justify-content: space-between;
+    align-content: center;
+    max-width: 1160px;
+    margin: 0 auto;
+  }
 
   &__text {
     margin: 0;
