--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -3,15 +3,20 @@
 
 .footer {
   @include text_type($font-main, 14px, 400, 24px, $color-main-dark);
-  display: flex;
-  justify-content: center;
-  align-content: space-between;
-  row-gap: 30px;
-  flex-wrap: wrap;
   width: 100%;
   padding: 100px 140px;
   background: #ffffff;
   box-shadow: 0 1px 0 $color-secondary-light;
+
+  &__wrapper {
+    display: flex;
+    justify-content: center;
+    align-content: space-between;
+    row-gap: 30px;
+    flex-wrap: wrap;
+    max-width: 1160px;
+    margin: 0 auto;
+  }
 
   &__description {
     display: flex;
